--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ yarn-debug.log*
 yarn-error.log*
 .idea/
 
-README.md
-package.json
-public/
-src/
+
+
 yarn.lock
+/node_modules/
+/package-lock.json
