--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jodit-master",
-  "version": "0.1.1",
+  "name": "jodit-play",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "jodit": "^3.1.36",
