--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jodit-play",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "dependencies": {},
   "scripts": {
     "build-rename": "npm run build-rename-js && npm run build-rename-css",
@@ -28,14 +28,14 @@
     ]
   },
   "devDependencies": {
-    "jodit": "^3.1.37",
-    "react-app-rewired": "^1.4.1",
+    "jodit": "^3.1.39",
     "jodit-react": "^1.0.14",
-    "renamer": "^0.6.1",
     "react": "^16.2.0",
+    "react-app-rewired": "^1.4.1",
     "react-dom": "^16.2.0",
     "react-scripts": "2.0.0-next.47d2d941",
     "react-syntax-highlighter": "^7.0.0",
-    "react-toggle": "^4.0.2"
+    "react-toggle": "^4.0.2",
+    "renamer": "^0.6.1"
   }
 }
