--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jodit-play",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "dependencies": {},
   "scripts": {
     "build-rename": "npm run build-rename-js && npm run build-rename-css",
@@ -13,7 +13,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://xdsoft.net/jodit/assets/",
+  "homepage": "./",
   "browserslist": {
     "development": [
       "last 2 chrome versions",
