--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jodit-play",
-  "version": "0.1.29",
+  "version": "0.1.30",
   "dependencies": {
     "history": "^4.7.2"
   },
   "scripts": {
+    "doc": "typedoc --mode modules  --module umd --json ./public/data.json --ignoreCompilerErrors --tsconfig ./node_modules/jodit/tsconfig.json ./node_modules/jodit/src/",
     "build-rename": "npm run build-rename-js && npm run build-rename-css",
     "build-rename-js": "renamer --regex --find \"main\\.[^\\.]+\\.js(\\.map)?\" --replace \"main.js$1\" build\\static\\js\\*",
     "build-rename-css": "renamer --regex --find \"main\\.[^\\.]+\\.css(\\.map)?\"  --replace \"main.css$1\" build\\static\\css\\*",
@@ -38,6 +39,7 @@
     "react-scripts": "2.0.0-next.47d2d941",
     "react-syntax-highlighter": "^7.0.1",
     "react-toggle": "^4.0.2",
-    "renamer": "^0.6.1"
+    "renamer": "^0.6.1",
+    "typedoc": "^0.10.0"
   }
 }
