--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "jodit-play",
-  "version": "0.1.33",
+  "version": "0.1.34",
   "dependencies": {
-    "history": "^4.7.2"
+    "history": "^4.7.2",
+    "react-color": "^2.14.0",
+    "tinycolor2": "^1.4.1"
   },
   "scripts": {
     "doc": "typedoc --mode modules  --module umd --json ./public/data.json --ignoreCompilerErrors --tsconfig ./node_modules/jodit/tsconfig.json ./node_modules/jodit/src/",
