--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jodit-play",
-  "version": "0.1.55",
+  "version": "0.1.56",
   "dependencies": {
     "history": "^4.7.2",
     "react-color": "^2.17.0",
@@ -9,8 +9,8 @@
   "scripts": {
     "doc": "typedoc --mode modules  --module umd --json ./public/data.json --ignoreCompilerErrors --tsconfig ./node_modules/jodit/tsconfig.json ./node_modules/jodit/src/",
     "build-rename": "npm run build-rename-js && npm run build-rename-css",
-    "build-rename-js": "renamer --regex --find \"main\\.[^\\.]+\\.js(\\.map)?\" --replace \"main.js$1\" build\\static\\js\\*",
-    "build-rename-css": "renamer --regex --find \"main\\.[^\\.]+\\.css(\\.map)?\"  --replace \"main.css$1\" build\\static\\css\\*",
+    "build-rename-js": "renamer --regex --find 'main\\.[^\\.]+\\.js(\\.map)?' --replace \"main.js$1\" build/static/js/*",
+    "build-rename-css": "renamer --regex --find \"main\\.[^\\.]+\\.css(\\.map)?\"  --replace \"main.css$1\" build/static/css/*",
     "newversion": "npm run build && npm version patch --no-git-tag-version && npm run github && npm publish ./",
     "github": "git add --all  && git commit -m \"New version $npm_package_version. Read more https://github.com/jodit/jodit-docs/releases/tag/$npm_package_version \" && git tag $npm_package_version && git push --tags origin HEAD:master",
     "start": "react-app-rewired  start",
