--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jodit-play",
-  "version": "0.1.94",
+  "version": "0.1.95",
   "dependencies": {
     "history": "^4.10.1",
     "react-app-polyfill": "^1.0.6",
@@ -10,8 +10,8 @@
   "scripts": {
     "doc": "typedoc --mode modules  --module umd --json ./public/data.json --ignoreCompilerErrors --tsconfig ./node_modules/jodit/tsconfig.json ./node_modules/jodit/src/",
     "build-rename": "npm run build-rename-js && npm run build-rename-css",
-    "build-rename-js": "renamer --regex --find 'main\\.[^\\.]+\\.js(\\.map)?' --replace \"main.js$1\" build/static/js/*",
-    "build-rename-css": "renamer --regex --find \"main\\.[^\\.]+\\.css(\\.map)?\"  --replace \"main.css$1\" build/static/css/*",
+    "build-rename-js": "renamer --find '/^main\\.(.+)\\.js(\\.map)?$/i' --replace 'main.js$2' build/static/js/*",
+    "build-rename-css": "renamer --find '/^main\\.(.+)\\.css(\\.map)?$/'  --replace 'main.css$2' build/static/css/*",
     "newversion": "npm update && npm run build && npm version patch --no-git-tag-version && npm run github && npm publish ./",
     "github": "git add --all  && git commit -m \"New version $npm_package_version. Read more https://github.com/jodit/jodit-docs/releases/tag/$npm_package_version \" && git tag $npm_package_version && git push --tags origin HEAD:master",
     "start": "react-app-rewired  start",
@@ -34,15 +34,15 @@
     ]
   },
   "devDependencies": {
-    "jodit": "^3.5.4",
-    "jodit-react": "^1.0.70",
+    "jodit": "^3.6.3",
+    "jodit-react": "^1.0.72",
     "react": "^16.14.0",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^16.14.0",
-    "react-scripts": "^3.4.4",
-    "react-syntax-highlighter": "^7.0.4",
+    "react-scripts": "^4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "react-toggle": "^4.1.1",
-    "renamer": "^0.6.1",
-    "typedoc": "^0.19.2"
+    "renamer": "^2.0.1",
+    "typedoc": "^0.20.30"
   }
 }
