--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jodit-play",
-  "version": "0.1.97",
+  "version": "0.1.98",
   "dependencies": {
     "history": "^4.10.1",
     "postcss-custom-properties": "^10.0.0",
@@ -16,7 +16,7 @@
     "newversion": "yarn upgrade && npm run build && npm version patch --no-git-tag-version && npm run github && npm publish ./",
     "github": "git add --all  && git commit -m \"New version $npm_package_version. Read more https://github.com/jodit/jodit-docs/releases/tag/$npm_package_version \" && git tag $npm_package_version && git push --tags origin HEAD:master",
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build && npm run build-rename",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
