--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-scripts/postcss-preset-env/postcss-custom-properties": "^10.0.0"
   },
   "devDependencies": {
-    "jodit": "^3.6.3",
+    "jodit": "https://github.com/xdan/jodit#master",
     "react": "^16.14.0",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^16.14.0",
