--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "jodit-play",
 	"version": "0.1.131",
 	"dependencies": {
-		"history": "^4.10.1",
-		"postcss-custom-properties": "^10.0.0",
-		"react-app-polyfill": "^1.0.6",
+		"history": "^5.3.0",
+		"postcss-custom-properties": "^13.3.2",
+		"react-app-polyfill": "^3.0.0",
 		"react-color": "^2.19.3",
-		"tinycolor2": "^1.4.2"
+		"tinycolor2": "^1.6.0"
 	},
 	"scripts": {
 		"doc": "typedoc --mode modules  --module umd --json ./public/data.json --ignoreCompilerErrors --tsconfig ./node_modules/jodit/tsconfig.json ./node_modules/jodit/src/",
@@ -34,18 +34,15 @@
 			"ie 11"
 		]
 	},
-	"resolutions": {
-		"react-scripts/postcss-preset-env/postcss-custom-properties": "^10.0.0"
-	},
 	"devDependencies": {
-		"jodit": "https://github.com/xdan/jodit#master",
-		"react": "^16.14.0",
-		"react-app-rewired": "^2.1.8",
-		"react-dom": "^16.14.0",
-		"react-scripts": "^4.0.3",
-		"react-syntax-highlighter": "^15.4.3",
-		"react-toggle": "^4.1.1",
-		"renamer": "^2.0.1",
-		"typedoc": "^0.20.30"
+		"jodit": "https://github.com/xdan/jodit#main",
+		"react": "^18.2.0",
+		"react-app-rewired": "^2.2.1",
+		"react-dom": "^18.2.0",
+		"react-scripts": "^5.0.1",
+		"react-syntax-highlighter": "^15.5.0",
+		"react-toggle": "^4.1.3",
+		"renamer": "^4.0.0",
+		"typedoc": "^0.25.3"
 	}
 }
